--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
     android:required="true" />
 
   <uses-permission android:name="android.permission.CAMERA" android:required="true" />
+  <uses-feature android:name="android.hardware.camera" />
+  <uses-feature android:name="android.hardware.camera.autofocus" />
 
   <uses-feature android:name="android.hardware.usb.accessory" />
 
