--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile(name: 'Analytics-release', ext: 'aar')
     compile(name: 'WirelessP2p-release', ext: 'aar')
     compile project(':opencv')
+    compile 'com.android.support:support-v4:19.1.0'
 }
